kubernetes/apps/actual/namespace.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.5/namespace-v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: actual
