kubernetes/apps/actual/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: actual
  labels:
    app.kubernetes.io/name: actualbudget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: actualbudget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actualbudget
    spec:
      serviceAccountName: actualbudget
      containers:
        - name: actualbudget
          image: "actualbudget/actual-server:25.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actualbudget-volume
