kubernetes/apps/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actual
  labels:
    app.kubernetes.io/name: actualbudget
spec:
  type: ClusterIP
  ports:
    - port: 5006
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: actualbudget
