kubernetes/apps/actual/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actualbudget
  namespace: actual
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`actual.lorenzolab.com`)
      services:
        - name: actualbudget
          port: 5006
  tls:
    secretName: actual-certificate-secret
